Disable Eager Execution

--- a/notebooks/detection_adversarial_samples_cifar10.ipynb
+++ b/notebooks/detection_adversarial_samples_cifar10.ipynb
@@ -113,9 +113,9 @@
    "source": [
     "path = get_file('cifar_resnet.h5',extract=False, path=config.ART_DATA_PATH,\n",
     "                url='https://www.dropbox.com/s/ta75pl4krya5djj/cifar_resnet.h5?dl=1')\n",
-    "classifier_model = load_model(path)\n",
-    "import tensorflow as tf\n",
-    "tf.config.run_functions_eagerly(False)\n",
+    "classifier_model = load_model(path)\n",    
+    "from tensorflow.python.framework.ops import disable_eager_execution\n",
+    "disable_eager_execution()\n",
     "classifier = KerasClassifier(clip_values=(min_, max_), model=classifier_model, use_logits=False, \n",
     "                             preprocessing=(0.5, 1))"
    ]
