Increase maximum recursion depth

--- a/notebooks/detection_adversarial_samples_cifar10.ipynb
+++ b/notebooks/detection_adversarial_samples_cifar10.ipynb
@@ -116,6 +116,8 @@
     "classifier_model = load_model(path)\n",    
     "from tensorflow.python.framework.ops import disable_eager_execution\n",
     "disable_eager_execution()\n",
+    "import sys\n",
+    "sys.setrecursionlimit(10000)\n",
     "classifier = KerasClassifier(clip_values=(min_, max_), model=classifier_model, use_logits=False, \n",
     "                             preprocessing=(0.5, 1))"
    ]
